[gd_scene load_steps=34 format=3]

[ext_resource type="Script" path="res://Script/Monster/zlw_special_effect_2.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dr3t7iuoroq10" path="res://Art/Monster/Monster_56/BG_1.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bxofu6ol5sua7" path="res://Art/Monster/Monster_55/ZL.png" id="3"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "3" )
region = Rect2(176, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "3" )
region = Rect2(352, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "3" )
region = Rect2(528, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "3" )
region = Rect2(704, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "3" )
region = Rect2(880, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "3" )
region = Rect2(1056, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "3" )
region = Rect2(1232, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource( "3" )
region = Rect2(1408, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource( "3" )
region = Rect2(1584, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource( "3" )
region = Rect2(1760, 0, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource( "3" )
region = Rect2(0, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource( "3" )
region = Rect2(176, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource( "3" )
region = Rect2(352, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource( "3" )
region = Rect2(528, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource( "3" )
region = Rect2(704, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource( "3" )
region = Rect2(880, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource( "3" )
region = Rect2(1056, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource( "3" )
region = Rect2(1232, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource( "3" )
region = Rect2(1408, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource( "3" )
region = Rect2(1584, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource( "3" )
region = Rect2(1760, 176, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource( "3" )
region = Rect2(0, 352, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource( "3" )
region = Rect2(176, 352, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource( "3" )
region = Rect2(352, 352, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource( "3" )
region = Rect2(528, 352, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource( "3" )
region = Rect2(704, 352, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource( "3" )
region = Rect2(880, 352, 176, 176)
script = null

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource( "3" )
region = Rect2(1056, 352, 176, 176)
script = null

[sub_resource type="SpriteFrames" id="30"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "9" )
}, {
"duration": 1.0,
"texture": SubResource( "10" )
}, {
"duration": 1.0,
"texture": SubResource( "11" )
}, {
"duration": 1.0,
"texture": SubResource( "12" )
}, {
"duration": 1.0,
"texture": SubResource( "13" )
}, {
"duration": 1.0,
"texture": SubResource( "14" )
}, {
"duration": 1.0,
"texture": SubResource( "15" )
}, {
"duration": 1.0,
"texture": SubResource( "16" )
}, {
"duration": 1.0,
"texture": SubResource( "17" )
}, {
"duration": 1.0,
"texture": SubResource( "18" )
}, {
"duration": 1.0,
"texture": SubResource( "19" )
}, {
"duration": 1.0,
"texture": SubResource( "20" )
}, {
"duration": 1.0,
"texture": SubResource( "21" )
}, {
"duration": 1.0,
"texture": SubResource( "22" )
}, {
"duration": 1.0,
"texture": SubResource( "23" )
}, {
"duration": 1.0,
"texture": SubResource( "24" )
}, {
"duration": 1.0,
"texture": SubResource( "25" )
}, {
"duration": 1.0,
"texture": SubResource( "26" )
}, {
"duration": 1.0,
"texture": SubResource( "27" )
}, {
"duration": 1.0,
"texture": SubResource( "28" )
}, {
"duration": 1.0,
"texture": SubResource( "29" )
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]
script = null

[node name="zlwSpecialEffect_2" type="Node2D"]
script = ExtResource( "1" )

[node name="Bg1" type="Sprite2D" parent="."]
texture = ExtResource( "2" )

[node name="LZ_1" type="AnimatedSprite2D" parent="."]
position = Vector2(-23, -29)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource( "30" )
autoplay = "default"
frame_progress = 0.195103
speed_scale = 0.7
metadata/_edit_lock_ = true

[node name="LZ_2" type="AnimatedSprite2D" parent="."]
position = Vector2(-211, 67)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource( "30" )
autoplay = "default"
frame_progress = 0.805873
speed_scale = 0.7
metadata/_edit_lock_ = true

[node name="LZ_4" type="AnimatedSprite2D" parent="."]
position = Vector2(-109, -5)
sprite_frames = SubResource( "30" )
autoplay = "default"
frame_progress = 0.816388
speed_scale = 0.7
metadata/_edit_lock_ = true

[node name="LZ_3" type="AnimatedSprite2D" parent="."]
position = Vector2(-144, 58)
sprite_frames = SubResource( "30" )
autoplay = "default"
frame_progress = 0.362373
speed_scale = 0.7
metadata/_edit_lock_ = true

[node name="LZ_6" type="AnimatedSprite2D" parent="."]
position = Vector2(50, -11)
scale = Vector2(1.1, 1.1)
sprite_frames = SubResource( "30" )
autoplay = "default"
frame_progress = 0.662715
speed_scale = 0.7
metadata/_edit_lock_ = true

[node name="LZ_5" type="AnimatedSprite2D" parent="."]
position = Vector2(-29, 8)
scale = Vector2(0.85, 0.85)
sprite_frames = SubResource( "30" )
autoplay = "default"
frame_progress = 0.618618
speed_scale = 0.7
metadata/_edit_lock_ = true

[node name="LZ_8" type="AnimatedSprite2D" parent="."]
position = Vector2(156, 55)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource( "30" )
autoplay = "default"
frame_progress = 0.880932
speed_scale = 0.7
metadata/_edit_lock_ = true

[node name="LZ_7" type="AnimatedSprite2D" parent="."]
position = Vector2(84, 46)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource( "30" )
autoplay = "default"
frame_progress = 0.0111331
speed_scale = 0.7
metadata/_edit_lock_ = true
